--- a/index.html
+++ b/index.html
@@ -65,28 +65,60 @@
     </div>
   </header>
 
-  <div class="bg-black">
-
     <main class="bg-black">
-      <section class="section section-a">
-        <div>
+      <div class="bg-black grid-wrapper">
+        <div class="one">
+          <section class="section">
           <h2>Section A</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
             maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
             accus</p>
+          </section>
         </div>
-      </section>
 
-      <section class="section section-b">
-        <div>
+        <div class="two">
+          <section class="section">
           <h2>Section B</h2>
           <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
             maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
             accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione
             reprehenderit delectus neque eligendi facere soluta dolor ducimus!</p>
+          </section>
         </div>
+        <div class="three">
+          <section class="section">
+            <h2>Section A</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
+              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
+              accus</p>
+          </section>
+        </div>
+        <div class="four">
+          <section class="section">
+            <h2>Section A</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
+              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
+              accus</p>
+          </section>
+        </div>
+        <div class="five">
+          <section class="section">
+            <h2>Section A</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
+              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
+              accus</p>
+          </section>
+        </div>
+        <div class="six">
+          <section class="section">
+            <h2>Section A</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
+              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
+              accus</p>
+          </section>
+        </div>
+      </div>
     </main>
-  </div>
 
   <!-- Footer -->
   <footer class="py-3 bg-black">
