--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     </div>
   </header>
 
-  <main>
-    <div class="bg-black grid-wrapper">
+  <main class="custom-background-gradient">
+    <div class="grid-wrapper">
 
 
       <section class="section one">
@@ -98,13 +98,29 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
               maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
               accus</p>
-          </section>
+        <table>
+          <thead>
+          <tr>
+            <th>Date</th>
+            <th>Location</th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr>
+            <th>20.12.19</th>
+            <th>Mbia</th>
+          </tr>
+          </tbody>
+        </table>
+      </section>
 
       <section class="section four">
             <h2>Section A</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
               maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
               accus</p>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
           </section>
 
 
@@ -113,6 +129,8 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
               maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
               accus</p>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
           </section>
 
 
@@ -121,6 +139,8 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
               maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
               accus</p>
+        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
           </section>
     </div>
   </main>
