--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/styles.css" rel="stylesheet">
+  <link href="node_modules/@fortawesome/fontawesome-free/css/all.css" rel="stylesheet"/>
 
 </head>
 
@@ -57,93 +58,136 @@
     </div>
     <div class="header-overlay"></div>
     <div class="header-content text-md-center">
-      <h1>Love Letter From Hell</h1>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Id temporibus perferendis necessitatibus numquam amet
-        impedit explicabo? Debitis quasi ullam aperiam!</p>
-      <p><a href="https://soundcloud.com/loveletterfromhell" target="_blank" class="border border-white px-5 py-2">Listen
+      <h1 class="text-flicker-in-glow mb-3">Love Letter From Hell</h1>
+      <p class="slide-in-right">Genres: Techno I Techhouse I Psytrance <br>Catch me 'if you can!<br>
+        For booking request pls contact my management: resichef@pullermanns.de</p>
+      <p class="slide-in-right"><a href="https://soundcloud.com/loveletterfromhell" target="_blank"
+                                   class="border px-5 py-2">Listen
         on Souncloud</a></p>
     </div>
   </header>
 
-  <main class="custom-background-gradient">
-    <div class="grid-wrapper">
-
-
-      <section class="section one">
-          <h2>Section A</h2>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
-            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione
-            reprehenderit delectus neque eligendi facere soluta dolor ducimus!Lorem ipsum dolor, sit amet consectetur
-            adipisicing elit. Unde, impedit amet minima iste autem cumque et
-            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione
-            reprehenderit delectus neque eligendi facere soluta dolor ducimus!Lorem ipsum dolor, sit amet consectetur
-            adipisicing elit. Unde, impedit amet minima iste autem cumque et
-            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione
-            reprehenderit delectus neque eligendi facere soluta dolor ducimus!Lorem ipsum dolor, sit amet consectetur
-            adipisicing elit. Unde, impedit amet minima iste autem cumque et
-            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione
-            reprehenderit delectus neque eligendi facere soluta dolor ducimus!</p>
-          </section>
-      <section class="section two section-b">
-
-      </section>
-
-
-      <section class="section three">
-        <h2>Next Bookings</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
-              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-              accus</p>
-        <table>
-          <thead>
-          <tr>
-            <th>Date</th>
-            <th>Location</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr>
-            <th>20.12.19</th>
-            <th>Mbia</th>
-          </tr>
-          </tbody>
-        </table>
-      </section>
-
-      <section class="section four">
-            <h2>Section A</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
-              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-              accus</p>
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-          </section>
-
-
-      <section class="section five">
-            <h2>Section A</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
-              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-              accus</p>
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-          </section>
-
-
-      <section class="section six">
-            <h2>Section A</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
-              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
-              accus</p>
-        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
-          </section>
+  <main>
+    <div id="aside-button" class="aside-button scale-in-center" onclick="toggleAsideWidget()">
+      <h2>Next Bookings</h2>
+      <i class="fas fa-angle-double-right fa-2x"></i>
     </div>
+    <section id="aside-widget" class="section aside-widget">
+      <div class="aside-widget-header" onclick="toggleAsideWidget()">
+        <h2>Next Bookings</h2>
+        <i class="fas fa-angle-double-right fa-2x"></i>
+      </div>
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et
+        maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae
+        accus</p>
+      <table class="booking-table">
+        <thead>
+        <tr>
+          <th>Date</th>
+          <th>Location</th>
+        </tr>
+        </thead>
+        <tbody class="table-striped">
+        <tr>
+          <td>20.12.19</td>
+          <td>Mbia</td>
+        </tr>
+        <tr>
+          <td>20.12.19</td>
+          <td>Mbia</td>
+        </tr>
+        <tr>
+          <td>20.12.19</td>
+          <td>Mbia</td>
+        </tr>
+        <tr>
+          <td>20.12.19</td>
+          <td>Mbia</td>
+        </tr>
+        </tbody>
+      </table>
+    </section>
   </main>
+
+  <!--  <main class="custom-background-gradient">-->
+  <!--    <div class="grid-wrapper">-->
+
+
+  <!--      <section class="section one">-->
+  <!--          <h2>Section A</h2>-->
+  <!--          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione-->
+  <!--            reprehenderit delectus neque eligendi facere soluta dolor ducimus!Lorem ipsum dolor, sit amet consectetur-->
+  <!--            adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione-->
+  <!--            reprehenderit delectus neque eligendi facere soluta dolor ducimus!Lorem ipsum dolor, sit amet consectetur-->
+  <!--            adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione-->
+  <!--            reprehenderit delectus neque eligendi facere soluta dolor ducimus!Lorem ipsum dolor, sit amet consectetur-->
+  <!--            adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--            maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--            accusantium, ex inventore ducimus. Beatae mollitia exercitationem, quam similique, consectetur ratione-->
+  <!--            reprehenderit delectus neque eligendi facere soluta dolor ducimus!</p>-->
+  <!--          </section>-->
+  <!--      <section class="section two section-b">-->
+
+  <!--      </section>-->
+
+
+  <!--      <section class="section three">-->
+  <!--        <h2>Next Bookings</h2>-->
+  <!--            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--              accus</p>-->
+  <!--        <table>-->
+  <!--          <thead>-->
+  <!--          <tr>-->
+  <!--            <th>Date</th>-->
+  <!--            <th>Location</th>-->
+  <!--          </tr>-->
+  <!--          </thead>-->
+  <!--          <tbody>-->
+  <!--          <tr>-->
+  <!--            <th>20.12.19</th>-->
+  <!--            <th>Mbia</th>-->
+  <!--          </tr>-->
+  <!--          </tbody>-->
+  <!--        </table>-->
+  <!--      </section>-->
+
+  <!--      <section class="section four">-->
+  <!--            <h2>Section A</h2>-->
+  <!--            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--              accus</p>-->
+  <!--        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"-->
+  <!--                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>-->
+  <!--          </section>-->
+
+
+  <!--      <section class="section five">-->
+  <!--            <h2>Section A</h2>-->
+  <!--            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--              accus</p>-->
+  <!--        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"-->
+  <!--                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>-->
+  <!--          </section>-->
+
+
+  <!--      <section class="section six">-->
+  <!--            <h2>Section A</h2>-->
+  <!--            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde, impedit amet minima iste autem cumque et-->
+  <!--              maiores blanditiis doloribus aut dolorum quaerat non est voluptatum, tempore ut dolorem voluptas quod quae-->
+  <!--              accus</p>-->
+  <!--        <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"-->
+  <!--                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/201376511&color=%2354646c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>-->
+  <!--          </section>-->
+  <!--    </div>-->
+  <!--  </main>-->
 
   <!-- Footer -->
   <footer class="py-3 bg-black">
