--- a/index.html
+++ b/index.html
@@ -51,8 +51,6 @@
 
   <header class="v-header container">
     <div class="fullscreen-video-wrap">
-      <!--  https://www.videvo.net/video/typing-on-computer-white-bg/4475/ -->
-      <!-- DO NOT USE THIS VIDEO, I JUST NEEDED A HOSTED VIDEO FOR THIS CODEPEN> USE THE ONE ABOVE -->
       <video src="public/videos/6bf2c8bd-5998-4806-bf01-6a29feb1839e.MP4" autoplay loop muted type="video/mp4">
       </video>
     </div>
@@ -60,14 +58,15 @@
     <div class="header-content text-md-center">
       <h1 class="text-flicker-in-glow mb-3">Love Letter From Hell</h1>
       <p class="slide-in-right">Genres: Techno I Techhouse I Psytrance <br>Catch me 'if you can!<br>
-        For booking request pls contact my management: resichef@pullermanns.de</p>
-      <p class="slide-in-right"><a href="https://soundcloud.com/loveletterfromhell" target="_blank"
-                                   class="border px-5 py-2">Listen
-        on Souncloud</a></p>
+        For booking requests, pls contact my management: resichef@pullermanns.de</p>
+      <p class="slide-in-right">
+        <a href="https://soundcloud.com/loveletterfromhell" target="_blank"
+           class="border px-5 py-2">Listen on Souncloud</a></p>
     </div>
   </header>
 
   <main>
+    <!-- TODO maybe adds animation "drop from top" if I add more menu items   -->
     <div id="aside-button" class="aside-button scale-in-center" onclick="toggleAsideWidget()">
       <h2>Next Bookings</h2>
       <i class="fas fa-angle-double-right fa-2x"></i>
